exports[`actions > organization generic model actions create should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > organization generic model actions delete should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-3",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > organization generic model actions update should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-1",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
